--- a/sasb/sasb_reporters.ipynb
+++ b/sasb/sasb_reporters.ipynb
@@ -2,10 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ac182ed3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openpyxl in /home/dfs/anaconda3/lib/python3.9/site-packages (3.0.9)\n",
+      "Requirement already satisfied: et-xmlfile in /home/dfs/anaconda3/lib/python3.9/site-packages (from openpyxl) (1.1.0)\n",
+      "Requirement already satisfied: selenium in /home/dfs/anaconda3/lib/python3.9/site-packages (4.10.0)\n",
+      "Requirement already satisfied: trio~=0.17 in /home/dfs/anaconda3/lib/python3.9/site-packages (from selenium) (0.22.2)\n",
+      "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /home/dfs/anaconda3/lib/python3.9/site-packages (from selenium) (1.26.7)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /home/dfs/anaconda3/lib/python3.9/site-packages (from selenium) (0.10.3)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in /home/dfs/anaconda3/lib/python3.9/site-packages (from selenium) (2021.10.8)\n",
+      "Requirement already satisfied: idna in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio~=0.17->selenium) (3.2)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio~=0.17->selenium) (1.1.2)\n",
+      "Requirement already satisfied: attrs>=20.1.0 in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio~=0.17->selenium) (21.2.0)\n",
+      "Requirement already satisfied: sortedcontainers in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: outcome in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: sniffio in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /home/dfs/anaconda3/lib/python3.9/site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in /home/dfs/anaconda3/lib/python3.9/site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /home/dfs/anaconda3/lib/python3.9/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install openpyxl\n",
     "!pip install selenium\n",
@@ -16,13 +39,15 @@
     "import time \n",
     "from selenium import webdriver\n",
     "from selenium.webdriver import Keys\n",
-    "from selenium.webdriver.common.by import By"
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.support.wait import WebDriverWait"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f620d151",
+   "execution_count": 2,
+   "id": "c2859ea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a2284831",
    "metadata": {},
    "outputs": [],
@@ -45,28 +70,28 @@
     "chrome_options.add_argument(\"--start-miniimized\")\n",
     "chrome_options.add_argument(\"--disable-extensions\")\n",
     "chrome_options.add_argument(\"--window-size=1920,1080\")\n",
-    "chrome_options.add_argument('--headless')\n",
+    "# chrome_options.add_argument('--headless')\n",
     "driver = webdriver.Chrome(options=chrome_options)\n",
     "driver.get('https://sasb.org/company-use/sasb-reporters/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d27a723e",
    "metadata": {},
    "outputs": [],
    "source": [
     "workbook = openpyxl.Workbook()\n",
     "sheet = workbook.active\n",
-    "sheet.append(['Company name', 'Industry', 'Sector', 'Country', 'Type of Document', 'Report Period'])\n",
+    "sheet.append(['Company name', 'Industry', 'Sector', 'Country', 'Type of Document', 'Report Period', 'Found in SASB'])\n",
     "output_file = 'data_' + str(random.randint(1, 1111)) + '.xlsx'\n",
     "workbook.save(output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "76c3716a",
    "metadata": {},
    "outputs": [],
@@ -84,16 +109,60 @@
    "execution_count": null,
    "id": "6a713d34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A.K. Spintex Ltd. -> Not Found\n",
+      "Aananda Lakshmi Spinning Mills Ltd. -> Not Found\n",
+      "Aarnav Fashions Ltd. -> Not Found\n",
+      "Aarvee Denims & Exports Ltd. -> Not Found\n",
+      "ABC-Mart Inc. -> Not Found\n",
+      "Acelon Chemicals & Fiber Corp. -> Not Found\n",
+      "Acknit Industries Ltd. -> Not Found\n",
+      "Active Clothing Co. Ltd. -> Not Found\n",
+      "Addi Industries Ltd. -> Not Found\n",
+      "adidas AG -> Found\n",
+      "adidas AG -> Found\n",
+      "adidas AG -> Found\n",
+      "adidas AG -> Found\n",
+      "adidas AG -> Found\n"
+     ]
+    }
+   ],
    "source": [
-    "trs = driver.find_elements(By.XPATH, '//tr[@class=\"border-b\"]')\n",
-    "for no, tr in enumerate(trs):\n",
-    "    tds = tr.find_elements(By.XPATH, './/td')\n",
-    "    temp = []\n",
-    "    for td in tds:\n",
-    "        temp.append(td.text)\n",
-    "    append_to_excel([temp])\n",
-    "    print(f'{no+1}. {temp[0]} -> inserted')"
+    "search_box = driver.find_element(By.ID, 'reports_filter_search')\n",
+    "\n",
+    "for ind in df.index:\n",
+    "    company_name = df['Company Name'][ind]\n",
+    "    search_box.clear()\n",
+    "    time.sleep(3)\n",
+    "    search_box.send_keys(company_name.strip())\n",
+    "    time.sleep(1)\n",
+    "    search_box.send_keys(Keys.RETURN)\n",
+    "    search_box.send_keys(Keys.RETURN)\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    try:\n",
+    "        WebDriverWait(driver, 1).until(EC.visibility_of_element_located((By.XPATH, '//tr[@class=\"border-b\"]')))\n",
+    "        trs = driver.find_elements(By.XPATH, '//tr[@class=\"border-b\"]')\n",
+    "        for no, tr in enumerate(trs):\n",
+    "            tds = tr.find_elements(By.XPATH, './/td')\n",
+    "            temp = []\n",
+    "            for td in tds:\n",
+    "                temp.append(td.text)\n",
+    "            temp.append('Yes')\n",
+    "            if company_name.strip() == temp[0].strip():\n",
+    "                append_to_excel([temp])\n",
+    "                print(f'{company_name} -> Found')\n",
+    "            else:\n",
+    "                append_to_excel([[company_name, '', '', '', '', '', 'No']])\n",
+    "                print(f'{company_name} -> Not Found')\n",
+    "            break\n",
+    "    except:\n",
+    "        append_to_excel([[company_name, '', '', '', '', '', 'No']])\n",
+    "        print(f'{company_name} -> Not Found')"
    ]
   },
   {
